--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/rss": "^2.4.4",
     "@astrojs/sitemap": "^2.0.2",
+    "@astrojs/ts-plugin": "^1.1.3",
     "astro": "^2.10.14",
     "bootstrap": "^5.3.1",
     "prettier-plugin-astro": "^0.12.0",
