--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,29 @@
     "forceConsistentCasingInFileNames": false,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "$types/*": ["src/@types/*"],
-      "$components/*": ["src/components/*",],
-  
-      "$constants/*": ["src/constants/*"],
-      "$functions/*": ["src/functions/*"],
-      "$layouts/*": ["src/layouts/*"]
+      "@/*": [
+        "src/*"
+      ],
+      "$types/*": [
+        "src/@types/*"
+      ],
+      "$components/*": [
+        "src/components/*"
+      ],
+      "$constants/*": [
+        "src/constants/*"
+      ],
+      "$functions/*": [
+        "src/functions/*"
+      ],
+      "$layouts/*": [
+        "src/layouts/*"
+      ]
     },
-
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
