--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "dependencies": {
     "@astrojs/image": "^0.17.3",
     "@astrojs/mdx": "^0.19.7",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^2.4.4",
     "@astrojs/sitemap": "^2.0.2",
     "@astrojs/ts-plugin": "^1.1.3",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.0",
     "astro": "^2.10.14",
     "bootstrap": "^5.3.1",
     "prettier-plugin-astro": "^0.12.0",
     "prettier-plugin-svelte": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.3"
+    "prettier-plugin-tailwindcss": "^0.5.3",
+    "react": "^19.0.0-beta",
+    "react-dom": "^19.0.0-beta"
   }
 }
