--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,13 @@
 {
-  "extends": "astro/tsconfigs/strict",
+  "extends": "astro/tsconfigs/base",
   "compilerOptions": {
-    "forceConsistentCasingInFileNames": false,
+    "strictNullChecks": true,
+    "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "$types/*": [
-        "src/@types/*"
-      ],
-      "$components/*": [
-        "src/components/*"
-      ],
-      "$constants/*": [
-        "src/constants/*"
-      ],
-      "$functions/*": [
-        "src/functions/*"
-      ],
-      "$layouts/*": [
-        "src/layouts/*"
-      ]
-    },
-    "jsx": "react-jsx",
-    "jsxImportSource": "react"
+      "~/*": ["src/*"]
+    }
   },
-  "include": [
-    "src"
-  ]
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist/"]
 }
