feat(website): update website content and config
- Updated website title and description
- Changed website links and button text
- Updated hero section content
- Modified features section content
- Revamped blueprint section content

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,6 +1,6 @@
 site:
-  name: AstroWind
-  site: 'https://astrowind.vercel.app'
+  name: SeedChurchBKK
+  site: 'https://seedchurchbkk.org'
   base: '/'
   trailingSlash: false
 
@@ -11,7 +11,7 @@ metadata:
   title:
     default: AstroWind
     template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+  description: "\U0001F680  เราเป็นโบสที่มีวัยรุ่น 100% เรามี culture แบบวันรุ่นและเน้นการมีความสัมพันธ์ที่ดีกับพระเจ้า."
   robots:
     index: true
     follow: true
