--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@astrolib/analytics": "^0.6.1",
     "@astrolib/seo": "^1.0.0-beta.8",
     "@fontsource-variable/inter": "^5.1.1",
+    "@fontsource/sarabun": "^5.1.1",
     "astro": "^5.2.5",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
