--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@typescript-eslint/parser": "^8.21.0",
     "astro-compress": "2.3.6",
     "astro-eslint-parser": "^1.1.0",
+    "daisyui": "^4.12.23",
     "eslint": "^9.18.0",
     "eslint-plugin-astro": "^1.3.1",
     "globals": "^15.14.0",
