feat: add Radix UI components & styles
- Added Button component from Radix UI
- Updated Tailwind config for Radix UI
- Added CSS variables for radius
- Updated components.json & package.json
- Improved folder structure & types

--- a/components.json
+++ b/components.json
@@ -7,7 +7,7 @@
     "config": "tailwind.config.js",
     "css": "src/assets/styles/tailwind.css",
     "baseColor": "neutral",
-    "cssVariables": true,
+    "cssVariables": false,
     "prefix": ""
   },
   "aliases": {
