--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
+      "@/*": [
+        "./src/*"
+      ],
       "~/*": ["src/*"],
       "$types/*": ["src/@types/*"],
       "$components/*": ["src/components/*"],
