--- a/package.json
+++ b/package.json
@@ -29,15 +29,20 @@
     "@astrolib/seo": "^1.0.0-beta.8",
     "@fontsource-variable/inter": "^5.1.1",
     "@fontsource/sarabun": "^5.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.2.5",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "unpic": "^3.22.0"
   },
   "devDependencies": {
@@ -69,7 +74,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "reading-time": "^1.5.0",
     "sharp": "0.33.5",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0",
