--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@onwidget/astrowind",
     "version": "1.0.0-beta.50",
-    "description": "AstroWind: A free template using Astro 5.0 and Tailwind CSS. Astro starter theme.",
+    "description": "SeedChBKK: A chruch having relationship with God, with one another, and with the world.",
     "type": "module",
     "private": true,
     "engines": {
