--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "limax": "4.1.0",
         "lodash.merge": "^4.6.2",
         "lucide-react": "^0.475.0",
+        "motion": "^12.5.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "svelte": "^5.20.2",
