feat(pages): add about2 page
- Added new About Us page
- Includes hero, stats, features,
  and steps sections
- Uses various custom components
- Responsive design implemented
- Includes contact information

--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ metadata:
     title:
         default: seedchurchbkk
         template: '%s — seedchurchbkk'
-    description: "\U0001F680 เราคือชุมชนคริสเตียนวัยรุ่น คริสเตียนคือคนที่เชื่อ รัก และติดตามคำสอนของพระเยซูคริสต์ เราเชื่อว่าพระเจ้าเป็นผู้สร้างทุกสิ่งรวมถึงชีวิตของคุณด้วย"
+    description: "\U0001F680 คริสตจักรเมล็ดพันธุ์กรุงเทพฯ เป็นคริสตจักรของคนรุ่นใหม่ ที่เต็มไปด้วยพลังและความหวัง เรามุ่งมั่นที่จะเป็นชุมชนแห่งความเชื่อที่ช่วยให้คนรุ่นใหม่ได้เติบโตในทางของพระเจ้า และขยายขอบเขตของอาณาจักรพระเจ้าในกรุงเทพฯ และรังสิต ผ่านการนมัสการ การเทศนา และกิจกรรมต่างๆ ที่เหมาะสมกับชีวิตของวัยรุ่น เราเชื่อว่าพระเจ้าทรงมีแผนการที่ยิ่งใหญ่สำหรับคนรุ่นใหม่ และเราพร้อมที่จะเป็นส่วนหนึ่งในการนำแผนการนั้นมาสู่ความจริง"
     robots:
         index: true
         follow: true
